# testrail-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/testrail_mcp/: __init__.py  server.py
