[project]
name = "testrail-mcp"
version = "0.1.0"
description = "MCP server for TestRail test management — expose TestRail API as MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmad Ilham" }]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
testrail-mcp = "testrail_mcp.server:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
